grammar.js
    source_file: $ => seq(
      repeat($.pragma_directive),
      repeat($.include_directive),
      repeat($._definition),
      optional($.main_component_definition),
    ),

    // -- [ Pragma ] --------------------------------------------------------
    // ParsePragma
    pragma_directive: $ => seq(
      'pragma',
      choice($.circom_pragma_token, $.circom_custom_templates_token),
      ';',
    ),

    circom_pragma_token: $ => seq(
      'circom',
      field('version', $.circom_version),
    ),

    // Version: SMALL_DECNUMBER "." SMALL_DECNUMBER "." SMALL_DECNUMBER
    circom_version: _ => seq(/[0-9]+/, '.', /[0-9]+/, '.', /[0-9]+/),

    // -- [ Include ] -------------------------------------------------------
    // ParseInclude
    _definition: $ => choice(
      $.function_definition,
      $.template_definition,
      $.bus_definition,
    ),

    template_definition: $ => seq(
      'template',
      optional(field('modifier', $.custom)),
      optional(field('modifier', $.extern_c)),
      optional(field('modifier', $.parallel)),
      field('name', $.identifier),
      optional(field('parameters', $.parameter_list)),
      field('body', $.template_body),
    ),

    template_body: $ => seq('{', repeat($._block_item), '}'),

    bus_definition: $ => seq(
      'bus',
      field('name', $.identifier),
      optional(field('parameters', $.parameter_list)),
      field('body', $.bus_body),
    ),

    bus_body: $ => seq('{', repeat($._block_item), '}'),

    parameter_list: $ => seq('(', commaSep($.parameter), ')'),

    parameter: $ => field('name', $.identifier),

    // ParseMainComponent
    main_component_definition: $ => seq(
      'component',
      'main',
      optional(field('public_signals', $.main_component_public_signals)),
      '=',
      field('value', $._expression),
      ';',
    ),

    // ParsePublicList
    main_component_public_signals: $ => seq(
      '{', 'public', '[', commaSep1($.identifier), ']', '}',
    ),

    // -- [ Statements ] ----------------------------------------------------
    // ParseStatement3: what a block may contain.
    _block_item: $ => choice(
      $._declaration,
      $._statement,
    ),

    expression_statement: $ => seq(
      choice(
        $.assignment_expression,
        $.increment_expression,
        $.decrement_expression,
        $._anonymous_component_statement,
      ),
      ';',
    ),

    _anonymous_component_statement: $ => choice(
      alias($._anonymous_component_call, $.call_expression),
      alias($._parenthesized_anonymous_component, $.parenthesized_expression),
    ),

    assignment_expression: $ => choice(
      $._substitution_assignment,
      seq(
        field('left', $._expression),
        field('operator', '==='),
        field('right', $._expression),
      ),
    ),

    _substitution_assignment: $ => choice(
      seq(
        field('left', $._expression),
        field('operator', choice('=', '<--', '<==', '-->', '==>')),
        field('right', $._expression),
      ),
      seq(
        field('left', $._variable),
        field('operator', choice(...COMPOUND_ASSIGNMENT_OPERATORS)),
        field('right', $._expression),
      ),
    ),

    signal_declaration_statement: $ => seq(
      choice(
        seq($._signal_header, choice($._signal_declarators, $._signal_tuple)),
        seq($._bus_header, $._signal_declarators),
      ),
      ';',
    ),

    // SignalHeader
    _signal_header: $ => seq(
      choice(
        seq('signal', optional(field('direction', $.signal_visibility))),
        seq(field('direction', $.signal_visibility), 'signal'),
      ),
      optional(field('tags', $.signal_tags)),
    ),

    // BusHeader
    _bus_header: $ => seq(
      choice(
        seq(field('type', $.bus_type), optional(field('direction', $.signal_visibility))),
        seq(field('direction', $.signal_visibility), field('type', $.bus_type)),
      ),
      optional(field('tags', $.signal_tags)),
    ),

    bus_type: $ => seq(
      field('name', $.identifier),
      optional(seq('(', optional(field('arguments', $.argument_list)), ')')),
    ),

    // Either every declarator uses `<--`, or none does (SignalSimpleSymbol
    // lists versus SignalSymbol lists).
    _signal_declarators: $ => choice(
      commaSep1(field('declarator', $.signal_declarator)),
      commaSep1(field('declarator', alias($._signal_declarator_unconstrained, $.signal_declarator))),
    ),

    signal_declarator: $ => seq(
      field('name', $.identifier),
      optional(field('dimensions', $.array_type)),
      optional(seq(field('operator', '<=='), field('value', $._expression))),
    ),

    _signal_tuple: $ => seq(
      '(',
      commaSep1(field('declarator', alias($._simple_declarator, $.signal_declarator))),
      ')',
      optional($._tuple_initialization),
    ),

    signal_visibility: _ => choice('input', 'output'),

    // ParseTagsList
    signal_tags: $ => seq('{', commaSep1($.identifier), '}'),

    variable_declaration_statement: $ => seq(
      'var',
      choice(
        commaSep1(field('declarator', $.variable_declarator)),
        seq(
          '(',
          commaSep1(field('declarator', alias($._simple_declarator, $.variable_declarator))),
          ')',
          optional($._tuple_initialization),
        ),
      ),
      ';',
    ),

    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional(field('dimensions', $.array_type)),
      optional(seq(field('operator', '='), field('value', $._expression))),
    ),

    component_declaration_statement: $ => seq(
      'component',
      choice(
        commaSep1(field('declarator', $.component_declarator)),
        seq(
          '(',
          commaSep1(field('declarator', alias($._simple_declarator, $.component_declarator))),
          ')',
          optional($._tuple_initialization),
        ),
      ),
      ';',
    ),

    component_declarator: $ => seq(
      field('name', $.identifier),
      optional(field('dimensions', $.array_type)),
      optional(seq(field('operator', '='), field('value', $._expression))),
    ),

    // SimpleSymbol
    _simple_declarator: $ => seq(
      field('name', $.identifier),
      optional(field('dimensions', $.array_type)),
    ),

    // TupleInitialization
    _tuple_initialization: $ => seq(
      field('operator', choice('<==', '<--', '=')),
      field('value', $._expression),
    ),

    // ParseArrayAcc*
    array_type: $ => repeat1(seq('[', $._expression, ']')),

    // -- [ Expressions ] ---------------------------------------------------
    // ParseExpression: Expression14 | ParseExpression1
    _expression: $ => choice(
      $.parallel_expression,
      $._expression1,
    ),

    // Expression14
    parallel_expression: $ => seq('parallel', field('expression', $._expression1)),

    // ParseExpression1: Expression13 | Expression12
    _expression1: $ => choice(
      $.ternary_expression,
      $._operand,
    ),

    // Expression13: not associative, the branches cannot be ternaries
    // without parentheses.
    _operand: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $._primary_expression,
    ),

    binary_expression: $ => choice(
      ...[
        ['||', PREC.OR],
        ['&&', PREC.AND],
        ['==', PREC.CMP],
        ['!=', PREC.CMP],
        ['<', PREC.CMP],
        ['>', PREC.CMP],
        ['<=', PREC.CMP],
        ['>=', PREC.CMP],
        ['|', PREC.BIT_OR],
        ['^', PREC.BIT_XOR],
        ['&', PREC.BIT_AND],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MUL],
        ['/', PREC.MUL],
        ['\\', PREC.MUL],
        ['%', PREC.MUL],
        ['**', PREC.POW],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._operand),
          // @ts-ignore
          field('operator', operator),
          field('right', $._operand),
        )),
      ),
    ),

    // Expression2: PrefixOpTier over Expression1, so a prefix operator
    // cannot be applied twice (`- -x`) and binds tighter than `**`.
    call_expression: $ => seq(
      field('function', $.identifier),
      '(',
      optional(field('arguments', $.argument_list)),
      ')',
      optional(field('inputs', $.anonymous_inputs)),
    ),

    anonymous_inputs: $ => seq(
      '(',
      optional(choice(
        $.argument_list,
        commaSep1(field('input', $.named_input)),
      )),
      ')',
    ),

    // ListableWithInputNames element
    argument_list: $ => commaSep1(field('argument', $._expression)),

    array_expression: $ => seq('[', commaSep1($._expression), ']'),

    // TwoElemsListable
    tuple_expression: $ => seq(
      '(',
      $._expression,
      ',',
      commaSep1($._expression),
      ')',
    ),

    _variable: $ => choice(
      $.identifier,
      $.member_expression,
      $.array_access_expression,
    ),

    member_expression: $ => seq(
      field('object', $._variable),
      '.',
      field('property', alias($.identifier, $.property_identifier)),
    ),

    array_access_expression: $ => seq(
      field('base', $._variable),
      '[',
      field('index', $._expression),
      ']',
    ),

    // The anonymous variable `_`.
    int_literal: _ => token(choice(
      /0x[0-9A-Fa-f]+/,
      /[0-9]+/,
    )),

    identifier: _ => /[$_]*[a-zA-Z][a-zA-Z$_0-9]*/,

    comment: _ => token(choice(
      seq('//', /[^\r\n]*/),
      seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
    )),
  },
});

/**
 * @param {RuleOrLiteral} rule
 * @return {SeqRule}
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

/**
 * @param {RuleOrLiteral} rule
 * @return {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}
